a1/brendan_gordon/TEST_PROGRAMS/invalidtype/mathieu_boucher/invalidtype3.min
#put float in if

var x : float;

if x then
	
endif

